test/positive/MethodBody.java
public class MethodBody {
    public MethodBody() {}

    public void f() {
    }

    protected void h() {
    }

    public final void g() {
    }

    public static void i() {
    }
}
