test/negative/InterfaceStaticMethod.java
public interface InterfaceStaticMethod {
    public static void f();
}
